Change contact form to use mailto: action

--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -16,7 +16,7 @@ title: "contact"
             <h1 class="white bold teaser_background_title">Kontaktieren Sie uns</h1>
       </div>
   </div>
-  
+
     <!-- Special for sm version -->
   <div class="visible-sm image-bg-fluid-height-contact-sm">
       <div class="img-responsive img-right teaser-title-bg" alt="">
@@ -39,7 +39,7 @@ title: "contact"
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <form method="post" class="has-success">
+        <form action="mailto:contact@5minds.de" method="post" class="has-success">
 
           <div class="form-group">
             <label class="contact" for="forename">Vorname</label>
