--- a/src/expertise/index.html
+++ b/src/expertise/index.html
@@ -1,6 +1,6 @@
 ---
 layout: layout.html
-title: "expertise" 
+title: "expertise"
 ---
 
 <div class="banner--expertise">
@@ -211,7 +211,7 @@ title: "expertise"
           <h4 class="pb10 nm blue text-left unsortet-list-margin-left"><span class="orange">»</span> Spezialgebiet: .NET</h4>
           <ul class="pb20 text-left list-padding-left unsortet-list-margin-left">
             <li>· ASP.NET, ASP.NET MVC, ASP.NET Web API</li>
-            <li>· Caliburn.Mirco</li>
+            <li>· Caliburn.Micro</li>
             <li>· Entity Framework (EF)</li>
             <li>· Microsoft Extensibility FrameWork (MEF)</li>
             <li>· Ninject</li>
@@ -284,7 +284,7 @@ title: "expertise"
           <h4 class="pb10 np blue text-left"><span class="orange">»</span> Spezialgebiet: .NET</h4>
           <ul class="pb20 text-left list-padding-left">
             <li>· ASP.NET, ASP.NET MVC, ASP.NET Web API</li>
-            <li>· Caliburn.Mirco</li>
+            <li>· Caliburn.Micro</li>
             <li>· Entity Framework (EF)</li>
             <li>· Microsoft Extensibility FrameWork (MEF)</li>
             <li>· Ninject</li>
